[Niraj]: Vuelidate functionality added in every page, toggle PwdVisibility and minor bug fixes

--- a/src/views/Register/Register.scss
+++ b/src/views/Register/Register.scss
@@ -86,17 +86,20 @@
       }
     }
     .right {
-        flex: 4;
-        @media screen and (max-width: 900px) {
-          display: none;
-        }
-  
-        .one-account {
-          padding: 0 2rem;
-          text-align: center;
-          font-weight: 300;
-          font-size: 1.1rem;
-        }
+      flex: 4;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      @media screen and (max-width: 900px) {
+        display: none;
       }
+
+      .one-account {
+        padding: 0 2rem;
+        text-align: center;
+        font-weight: 300;
+        font-size: 1.1rem;
+      }
+    }
   }
 }
